Update Refactoring code and fix bug of service