@@ -15,6 +15,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
 import java.util.function.BiConsumer;
+import java.util.stream.Collectors;
 
 public class FileChannelService implements ChannelRepository {
 
@@ -27,45 +28,16 @@ public class FileChannelService implements ChannelRepository {
 
     public FileChannelService() {
         repositoryCheck();
+        resetChannelRepository();
     }
     @Override
     public ChannelDto getChannelById(UUID channelId) {
-        try(ObjectInputStream ois
-                = new ObjectInputStream(
-                        new FileInputStream(channelRepositoryDataPath)
-        )){
-
-            List<Channel> channelDb = (List<Channel>) ois.readObject();
-            boolean isExist = channelDb.stream().anyMatch(x -> x.getId() == channelId);
-            if(!isExist) return null;
-
-            return channelDb.stream().filter(x->x.getId()==channelId).findFirst()
-                    .map(this::channelToChannelDto).orElse(null);
-        }
-            catch (Exception e) {
-            e.printStackTrace();
-        }
-
-        return null;
+        return loadAllChannel().stream().filter(x->x.getId().equals(channelId)).map(this::channelToChannelDto).findFirst().orElse(null);
     }
 
     @Override
     public ChannelDto getChannelByName(String channelName) {
-        try(ObjectInputStream ois
-                    = new ObjectInputStream(
-                new FileInputStream(channelRepositoryFile)
-        )){
-
-            List<Channel> channelDb = (List<Channel>) ois.readObject();
-            boolean isExist = channelDb.stream().anyMatch(x -> x.getName() == channelName);
-            if(!isExist) return null;
-            return channelDb.stream().filter(x->x.getName()==channelName).findFirst()
-                    .map(this::channelToChannelDto).orElse(null);
-        }
-        catch (Exception e) {
-            e.printStackTrace();
-        }
-        return null;
+        return loadAllChannel().stream().filter(x->x.getName().equals(channelName)).map(this::channelToChannelDto).findFirst().orElse(null);
     }
 
     public ChannelDto  getChannel(ChannelDto channelDto){
@@ -89,120 +61,74 @@ public class FileChannelService implements ChannelRepository {
 
     @Override
     public void deleteChannel(ChannelDto channelDto) {
-        boolean isExist = deletedChannelRepositoryFile.exists() && deletedChannelRepositoryFile.length()>0;
-
-        try(ObjectOutputStream oos =
-                isExist ? new AppendableObjectOutputStream(new FileOutputStream(deletedChannelRepositoryDataPath,true))
-                        : new ObjectOutputStream(new FileOutputStream(deletedChannelRepositoryDataPath));
-            ObjectInputStream ois = new ObjectInputStream(new FileInputStream(channelRepositoryDataPath));
-
-                ){
-            oos.writeObject(channelDtoToDeletedChannel(channelDto));
-            List<Channel> tempChannelList = (List<Channel>) ois.readObject();
-            tempChannelList.removeIf(x->x.getId()==channelDto.getId());
-            ois.close();
-            ObjectOutputStream oosChannel = new ObjectOutputStream(new FileOutputStream(channelRepositoryDataPath));
-            oosChannel.writeObject(tempChannelList);
-            oosChannel.close();
-
-        }
-        catch (Exception e) {
-            e.printStackTrace();
-        }
+      List<Channel> channels = loadAllChannel();
+      List<DeletedChannel> deletedChannels = loadAllDeletedChannel();
+      channels.remove(channelDtoToChannel(channelDto));
+      deletedChannels.add(channelDtoToDeletedChannel(channelDto));
+      saveAllChannel(channels);
+      saveAllDeletedChannel(deletedChannels);
 
     }
 
     @Override
     public <T>void updateChannel(ChannelDto channelDto, Channel.channelElement channelElement, T updatedContent) {
-        try(
-                ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream(channelRepositoryDataPath));
-                       )
-        {
-
-            Channel updatedChannel = channelDtoToChannel(channelDto);
-            BiConsumer<Channel, Object> editFunction = channelElement.setter;
-            Object oldContent = channelElement.getter.apply(updatedChannel);
-
-            editFunction.accept(updatedChannel, updatedContent);
-            updatedChannel.updateEntity();
-
-
-            List<Channel>tempChannels = new ArrayList<>();
-            ObjectInputStream ois = new ObjectInputStream(new FileInputStream(channelRepositoryDataPath));
-            while(true){
-                try{
-                    Channel tempChannel = (Channel) ois.readObject();
-                    tempChannels.add(tempChannel);
-                }
-                catch (EOFException e){
-                    break;
-                }
-            }
-            ois.close();
-            Channel previousChannel = tempChannels.stream().filter(x->x.getId()==channelDto.getId()).findFirst().get();
-            tempChannels.remove(previousChannel);
-            tempChannels.add(updatedChannel);
-
-            oos.writeObject(tempChannels);
+         List<Channel> channels = loadAllChannel();
+         Channel targetChannel = channels.stream().filter(x->x.getId().equals(channelDto.getId())).findFirst().orElse(null);
+         BiConsumer<Channel, Object> editFunction = channelElement.setter;
+         editFunction.accept(targetChannel, updatedContent);
+         targetChannel.updateEntity();
+         saveAllChannel(channels);
+//        try(
+//                ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream(channelRepositoryDataPath));
+//                       )
+//        {
+//
+//            Channel updatedChannel = channelDtoToChannel(channelDto);
+//            BiConsumer<Channel, Object> editFunction = channelElement.setter;
+//            Object oldContent = channelElement.getter.apply(updatedChannel);
+//
+//            editFunction.accept(updatedChannel, updatedContent);
+//            updatedChannel.updateEntity();
+//
+//
+//            List<Channel>tempChannels = new ArrayList<>();
+//            ObjectInputStream ois = new ObjectInputStream(new FileInputStream(channelRepositoryDataPath));
+//            while(true){
+//                try{
+//                    Channel tempChannel = (Channel) ois.readObject();
+//                    tempChannels.add(tempChannel);
+//                }
+//                catch (EOFException e){
+//                    break;
+//                }
+//            }
+//            ois.close();
+//            Channel previousChannel = tempChannels.stream().filter(x->x.getId()==channelDto.getId()).findFirst().get();
+//            tempChannels.remove(previousChannel);
+//            tempChannels.add(updatedChannel);
+//
+//            oos.writeObject(tempChannels);
         }
-        catch (Exception e) {
-            e.printStackTrace();
-        }
 
 
-    }
+
 
     @Override
     public ChannelDto[] getAllChannel() {
-        try(ObjectInputStream ois
-                    = new ObjectInputStream(
-                new FileInputStream(channelRepositoryDataPath)
-        )){
-            List<Channel> channelDb = (List<Channel>) ois.readObject();
-            return channelDb.stream().map(this::channelToChannelDto).toArray(ChannelDto[]::new);
-
-
-
-
-        }
-        catch (Exception e) {
-            e.printStackTrace();
-        }
-        return null;
+       return loadAllChannel().stream().map(this::channelToChannelDto).toArray(ChannelDto[]::new);
 
     }
 
     @Override
     public ChannelDto[] getUpdatedChannel() {
-        try(ObjectInputStream ois
-                = new ObjectInputStream(
-                        new FileInputStream(channelRepositoryDataPath))
-        ){
-            List<Channel> channelDb = (List<Channel>) ois.readObject();
-            return channelDb.stream().filter(x->x.getUpdatedAt()!= Entity.DEFAULT_UPDATED_AT).map(this::channelToChannelDto).toArray(ChannelDto[]::new);
-        }
-        catch (Exception e) {
-            e.printStackTrace();
-        }
-        return null;
+        List<Channel> channels = loadAllChannel();
+        return channels.stream().filter(x->x.getUpdatedAt()!=Entity.DEFAULT_UPDATED_AT).map(this::channelToChannelDto).toArray(ChannelDto[]::new);
 
     }
 
     @Override
     public DeletedChannelDto[] getDeletedChannel() {
-        try(ObjectInputStream ois
-                = new ObjectInputStream(
-                        new FileInputStream(deletedChannelRepositoryDataPath))
-        ){
-            List<DeletedChannel> deletedChannelDb = (List<DeletedChannel>) ois.readObject();
-            return deletedChannelDb.stream().map(this::deletedChannelToDeletedChannelDto).toArray(DeletedChannelDto[]::new);
-        }
-        catch (Exception e) {
-            e.printStackTrace();
-        }
-
-
-        return null;
+       return loadAllDeletedChannel().stream().map(this::deletedChannelToDeletedChannelDto).toArray(DeletedChannelDto[]::new);
     }
 
     private void repositoryCheck(){
@@ -213,48 +139,24 @@ public class FileChannelService implements ChannelRepository {
                 e.printStackTrace();
             }
         }
+
         if(!deletedChannelRepositoryFile.exists()){
             try{
                 deletedChannelRepositoryFile.createNewFile();
             } catch (IOException e) {}
         }
 
+
     }
 
 
     @Override
     public void addUserToChannel(UserDto userDto, ChannelDto channelDto) {
-        if(userDto==null || channelDto==null){
-            return;
-        }
-        try(
-                ObjectInputStream ois = new ObjectInputStream
-                        (new FileInputStream
-                                (channelRepositoryDataPath));)
-
-        {
-
-            List<Channel> channelDb = (List<Channel>) ois.readObject();
-
-            ois.close();
-
-            ObjectOutputStream oosChannel = new ObjectOutputStream
-                    (new FileOutputStream(channelRepositoryDataPath));
-
-            Channel tempChannel = channelDb.stream().filter(x->x.getId().equals(channelDto.getId())).findFirst().get();
-            User tempUser = new User(userDto.getId(),userDto.getName(),userDto.getNickname(),userDto.getEmail(),userDto.isOnline());
-            tempChannel.addUserToChannel(tempUser);
-            channelDb.remove(channelDtoToChannel(channelDto));
-            channelDb.add(tempChannel);
-
-            oosChannel.writeObject(channelDb);
-            oosChannel.close();
-
-        }
-        catch (Exception e){
-            e.printStackTrace();
-        }
-
+        List<Channel> channelDb = loadAllChannel();
+        Channel targetChannel = channelDb.stream().filter(x->x.getId().equals(channelDto.getId())).findFirst().orElse(null);
+        User tempUser = new User(userDto.getId(),userDto.getName(),userDto.getNickname(),userDto.getEmail(),userDto.isOnline());
+        targetChannel.addUserToChannel(tempUser);
+        saveAllChannel(channelDb);
 
     }
 
@@ -264,45 +166,56 @@ public class FileChannelService implements ChannelRepository {
         if(userDto==null || channelDto==null){
             return;
         }
-        try(
-                ObjectInputStream ois = new ObjectInputStream
-                        (new FileInputStream
-                                (channelRepositoryDataPath));
-        )
-        {
+        List<Channel> channelDb = loadAllChannel();
+        Channel targetChannel = channelDb.stream().filter(x->x.getId().equals(channelDto.getId())).findFirst().orElse(null);
+        User tempUser = new User(userDto.getId(),userDto.getName(),userDto.getNickname(),userDto.getEmail(),userDto.isOnline());
+        targetChannel.removeUserFromChannel(tempUser);
+        saveAllChannel(channelDb);
 
-            ObjectOutputStream oosChannel = new ObjectOutputStream
-                    (new FileOutputStream(channelRepositoryDataPath));
+//        try(
+//                ObjectInputStream ois = new ObjectInputStream
+//                        (new FileInputStream
+//                                (channelRepositoryDataPath));
+//        )
+//        {
+//
+//            ObjectOutputStream oosChannel = new ObjectOutputStream
+//                    (new FileOutputStream(channelRepositoryDataPath));
+//
+//            List<Channel> channelDb = (List<Channel>) ois.readObject();
+//
+//
+//            Channel tempChannel = channelDb.stream().filter(x->x.getId().equals(channelDto.getId())).findFirst().get();
+//            User tempUser = new User(userDto.getId(),userDto.getName(),userDto.getNickname(),userDto.getEmail(),userDto.isOnline());
+//            tempChannel.removeUserFromChannel(tempUser);
+//            channelDb.remove(channelDtoToChannel(channelDto));
+//            channelDb.add(tempChannel);
+//
+//            oosChannel.writeObject(channelDb);
+//            oosChannel.close();
+//        }
+//        catch (Exception e){
+//            e.printStackTrace();
+//        }
 
-            List<Channel> channelDb = (List<Channel>) ois.readObject();
+    }
 
-
-            Channel tempChannel = channelDb.stream().filter(x->x.getId().equals(channelDto.getId())).findFirst().get();
-            User tempUser = new User(userDto.getId(),userDto.getName(),userDto.getNickname(),userDto.getEmail(),userDto.isOnline());
-            tempChannel.removeUserFromChannel(tempUser);
-            channelDb.remove(channelDtoToChannel(channelDto));
-            channelDb.add(tempChannel);
-
-            oosChannel.writeObject(channelDb);
-            oosChannel.close();
-        }
-        catch (Exception e){
-            e.printStackTrace();
-        }
-
+    @Override
+    public void resetChannelRepository() {
+        saveAllChannel(new ArrayList<>());
     }
 
     private ChannelDto channelToChannelDto(Channel channel){
         List<UserDto> userDtoList = channel.getUserDb().stream().map(
                 x->new UserDto(x.getId(),x.getName(),x.getNickname(),x.getEmail(),x.isOnline())
-        ).toList();
+        ).collect(Collectors.toList());
 
-        return new ChannelDto(channel.getName(),channel.getDescription(),channel.isPublic(),channel.isTextChannel(),userDtoList);
+        return new ChannelDto(channel.getId(),channel.getName(),channel.getDescription(),channel.isPublic(),channel.isTextChannel(),userDtoList);
     }
     private Channel channelDtoToChannel(ChannelDto channelDto){
         List<User> userDb = channelDto.getUserDtoList().stream().map(
                 x->new User(x.getId(),x.getName(),x.getNickname(),x.getEmail(),x.isOnline())
-        ).toList();
+        ).collect(Collectors.toList());
         return new Channel(channelDto.getId(),channelDto.getName(),channelDto.getDescription(),channelDto.isPublic(),channelDto.isTextChannel(),userDb);
     }
     private DeletedChannelDto deletedChannelToDeletedChannelDto(DeletedChannel deletedChannel){
@@ -338,6 +251,32 @@ public class FileChannelService implements ChannelRepository {
             e.printStackTrace();
         }
         return new ArrayList<>();
+    }
+
+    private List<DeletedChannel> loadAllDeletedChannel(){
+        if(!deletedChannelRepositoryFile.exists() || deletedChannelRepositoryFile.length() == 0) {
+            return new ArrayList<>();
+        }
+        try(ObjectInputStream ois = new ObjectInputStream(new FileInputStream(deletedChannelRepositoryDataPath));){
+            return (List<DeletedChannel>) ois.readObject();
+        }
+        catch (Exception e){
+            e.printStackTrace();
+        }
+        return new ArrayList<>();
+    }
+
+    private void saveAllDeletedChannel(List<DeletedChannel>deletedChannelList){
+        try (
+            ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream(deletedChannelRepositoryFile))){
+            oos.writeObject(deletedChannelList);
+            oos.flush();
+
+            }
+            catch (Exception e){
+                e.printStackTrace();
+            }
+
     }
     @Override
     public void saveChannel(ChannelDto channelDto){
